// file: proto/gcommon/v2/config/v2/config_admin_service.proto
// version: 1.0.1
// guid: 115f65c3-94f2-4c4d-892d-27eb6c9fcece

edition = "2023";

package config.v2;

import "config/v2/backup_config_request.proto";
import "config/v2/config_backup.proto";
import "config/v2/config_snapshot.proto";
import "config/v2/export_config_request.proto";
import "config/v2/get_config_history_request.proto";
import "config/v2/get_config_history_response.proto";
import "config/v2/get_config_stats_request.proto";
import "config/v2/get_config_stats_response.proto";
import "config/v2/health_check_request.proto";
import "config/v2/health_check_response.proto";
import "config/v2/import_config_request.proto";
import "config/v2/reload_config_request.proto";
import "config/v2/restore_config_request.proto";
import "config/v2/rollback_config_request.proto";
import "config/v2/set_config_schema_request.proto";
import "config/v2/unwatch_config_request.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/config/v2";

/**
 * ConfigAdminService provides administrative configuration operations.
 */
service ConfigAdminService {
  // Create a configuration backup
  rpc BackupConfig(BackupConfigRequest) returns (ConfigBackup);

  // Restore configuration from a backup or restore point
  rpc RestoreConfig(RestoreConfigRequest) returns (google.protobuf.Empty);

  // Import configuration values
  rpc ImportConfig(ImportConfigRequest) returns (google.protobuf.Empty);

  // Export configuration snapshot
  rpc ExportConfig(ExportConfigRequest) returns (ConfigSnapshot);

  // Reload configuration from persistent storage
  rpc ReloadConfig(ReloadConfigRequest) returns (google.protobuf.Empty);

  // Roll back configuration to a previous restore point
  rpc RollbackConfig(RollbackConfigRequest) returns (google.protobuf.Empty);

  // Update configuration schema
  rpc SetConfigSchema(SetConfigSchemaRequest) returns (google.protobuf.Empty);

  // Retrieve configuration change history
  rpc GetConfigHistory(GetConfigHistoryRequest) returns (GetConfigHistoryResponse);

  // Retrieve configuration statistics
  rpc GetConfigStats(GetConfigStatsRequest) returns (GetConfigStatsResponse);

  // Perform service health check
  rpc HealthCheck(ConfigHealthCheckRequest) returns (ConfigHealthCheckResponse);

  // Stop watching configuration changes
  rpc UnwatchConfig(UnwatchConfigRequest) returns (google.protobuf.Empty);
}
