// filepath: pkg/config/proto/requests/backup_config_request.proto
// file: config/proto/requests/backup_config_request.proto
//
// Request definitions for config module
// Generated as part of protobuf implementation
//
edition = "2023";

package gcommon.v1.config;

import "google/protobuf/go_features.proto";
import "pkg/common/proto/messages/request_metadata.proto";

option go_package = "../../../../pkg/config/pb;configpb";
option features.(pb.go).api_level = API_HYBRID;

/**
 * BackupConfigRequest triggers creation of a configuration backup.
 */
message BackupConfigRequest {
  // Namespace or environment to back up
  string namespace = 1;

  // Optional description for the backup
  string description = 2;

  // Include secrets in the backup
  bool include_secrets = 3;

  // Request metadata
  gcommon.v1.common.RequestMetadata metadata = 4;
}
