// file: pkg/config/grpc/admin_service.go
// version: 1.0.0
// guid: bbbbbbbb-bbbb-bbbb-bbbb-bbbbbbbbbbbb

package grpc

import (
	"context"

	"github.com/jdfalk/gcommon/pkg/config"
	configpb "github.com/jdfalk/gcommon/pkg/config/proto"
	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/status"
	"google.golang.org/protobuf/types/known/emptypb"
)

// ConfigAdminServiceServer implements administrative gRPC service
// TODO: Implement backup and restore logic
// TODO: Add access control and auditing
// TODO: Support asynchronous operations
// TODO: Provide progress reporting
// TODO: Handle large configuration data efficiently
// TODO: Integrate with storage systems
// TODO: End TODO list

type ConfigAdminServiceServer struct {
	configpb.UnimplementedConfigAdminServiceServer
	Provider config.Provider
}

// BackupConfig triggers configuration backup
func (s *ConfigAdminServiceServer) BackupConfig(ctx context.Context, req *configpb.BackupConfigRequest) (*configpb.ConfigBackup, error) {
	if s.Provider == nil {
		return nil, status.Error(codes.Unimplemented, "provider not configured")
	}
	// TODO: Implement backup using provider
	return &configpb.ConfigBackup{}, nil
}

// RestoreConfig restores configuration from snapshot
func (s *ConfigAdminServiceServer) RestoreConfig(ctx context.Context, req *configpb.RestoreConfigRequest) (*emptypb.Empty, error) {
	if s.Provider == nil {
		return nil, status.Error(codes.Unimplemented, "provider not configured")
	}
	// TODO: Implement restore logic
	return &emptypb.Empty{}, nil
}

var _ configpb.ConfigAdminServiceServer = (*ConfigAdminServiceServer)(nil)

// EOF
